skaffold/k8s-elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic
spec:
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      name: elastic-pod
      labels:
        app: elastic
    spec:
      containers:
        - name: elastic
          image: docker.elastic.co/elasticsearch/elasticsearch:6.8.14
          ports:
            - name: http
              containerPort: 9200
            - name: transport
              containerPort: 9300
  selector:
    matchLabels:
      app: elastic
---
apiVersion: v1
kind: Service
metadata:
  name: elastic
spec:
  selector:
    app: elastic
  ports:
    - name: http
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300
