skaffold/k8s-elastic-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elastic
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fves.iron.mapleleaf.intranet
      http:
        paths:
        - path: /
          backend:
            serviceName: elastic
            servicePort: 9200
